--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,9 +1,9 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  // padding: 0 16px;
-    box-sizing: border-box;
-
+  padding: 0 16px;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .headerCont {
@@ -13,4 +13,22 @@
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+  .container {
+    padding: 0 24px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    padding: 0 32px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container {
+    padding: 0 40px;
+  }
 }
