--- a/src/pages/LocationDeteilsPage/ReviewsSection.module.scss
+++ b/src/pages/LocationDeteilsPage/ReviewsSection.module.scss
@@ -1,3 +1,143 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+.reviews {
+  padding: 60px 0;
+  font-family: "Montserrat", sans-serif;
+
+  @media (max-width: 768px) {
+    padding: 40px 0;
+  }
+
+  &__title {
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    color: #3f2e27;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+
+    @media (max-width: 900px) {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+  }
+
+  &__pagination {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 30px;
+  }
+
+  &__pagination-btn {
+    width: 44px;
+    height: 44px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f7e0d6;
+    color: #333;
+    font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #eecab8;
+    }
+
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.review-card {
+  background-color: #ffece5;
+  padding: 30px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  height: 230px;
+
+  &__rating {
+    display: flex;
+    gap: 4px;
+    color: #cc6534;
+    font-size: 14px;
+
+    svg {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  &__text {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #4a3b32;
+
+    flex: 1;
+    overflow: hidden;
+    position: relative;
+
+    max-width: 100%;
+    overflow-wrap: break-word;
+    word-break: break-word;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+
+      height: 2.2em;
+      background: linear-gradient(
+                      to bottom,
+                      rgba(255, 236, 229, 0),
+                      #ffece5
+      );
+      pointer-events: none;
+    }
+  }
+
+  &__author {
+    margin-top: auto;
+  }
+
+  &__author-name {
+    font-weight: 700;
+    color: #3f2e27;
+    font-size: 16px;
+    display: block;
+    margin-bottom: 4px;
+  }
+
+  &__author-location {
+    font-size: 12px;
+    font-weight: 600;
+    text-decoration: underline;
+    color: #3f2e27;
+  }
+}
+
+.reviews__button{
+  padding: 12px 24px;
+  border-radius: 10px;
+  border: none;
+  background-color: #cc6534;
+  font-weight: 600;
+  color: #fff;  
+  margin-bottom: 15px;
+}
 /* ReviewsSection.module.scss */
 
 .reviews {
