--- a/src/pages/LocationDeteilsPage/LocationDetailsPage.module.scss
+++ b/src/pages/LocationDeteilsPage/LocationDetailsPage.module.scss
@@ -12,8 +12,8 @@
 
 .wrapperLocation {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   margin: 0 auto;
   gap: 40px;
@@ -279,6 +279,7 @@
 
   .wrapperLocation {
     gap: 40px;
+    flex-direction: row-reverse;
   }
 
   .imageBox .imageLocation {
