--- a/src/pages/HomePage/LocationCard.module.scss
+++ b/src/pages/HomePage/LocationCard.module.scss
@@ -19,6 +19,9 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.3s ease;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
+            image-rendering: high-quality;
         }
     }
 
