--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 12px;
   box-sizing: border-box;
   width: 100%;
 }
@@ -15,20 +15,20 @@
   justify-content: space-between;
 }
 
-@media (min-width: 768px) {
-  .container {
-    padding: 0 24px;
-  }
-}
+// @media (min-width: 768px) {
+//   .container {
+//     padding: 0 8px;
+//   }
+// }
 
-@media (min-width: 1024px) {
-  .container {
-    padding: 0 32px;
-  }
-}
+// @media (min-width: 1024px) {
+//   .container {
+//     padding: 0 32px;
+//   }
+// }
 
-@media (min-width: 1440px) {
-  .container {
-    padding: 0 40px;
-  }
-}
+// @media (min-width: 1440px) {
+//   .container {
+//     padding: 0 40px;
+//   }
+// }
