--- a/src/pages/HomePage/HeroBlock.module.scss
+++ b/src/pages/HomePage/HeroBlock.module.scss
@@ -151,3 +151,15 @@
         background-color: #c06030;
     }
 }
+
+.hero__search-error {
+    margin: 8px 0 0;
+    font-size: 14px;
+    color: #fff;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+
+    @media (max-width: 768px) {
+        color: #5c4a40;
+        text-shadow: none;
+    }
+}
