--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -6,7 +6,7 @@
     gap: 20px;
     position: fixed;
     inset: 0;
-    background: linear-gradient(135deg, #FFF2EC, #CC6534, #FFE5D9);
+    background: linear-gradient(135deg, #FFF2EC, #fea57c, #FFE5D9);
     color: white;
     z-index: 9999;
     animation: fadeIn 0.7s ease;
